# SlopeStab

./: .gitattributes  .gitignore  AGENTS.md  AUTO_REFINE.md  BUGS.md  PLANS.md  README.md  baseline_test_before_fix.json  baseline_verify_before_fix.json  pyproject.toml  test_after_fix.json  verify_after_fix.json
docs/: auto-refine-explainer.md  cmaes-global-explainer.md  cuckoo-global-explainer.md  direct-global-explainer.md  groundwater-explainer.md  seismic-explainer.md  spencer-explainer.md  surcharge-explainer.md
docs/benchmarks/: auto-mode-policy-evidence-2026-03-23.json  auto-mode-policy-evidence-2026-03-23.md  auto_refine_post_polish_ab.json  auto_refine_post_polish_ab.md  auto_refine_slide2_case2_case4_new.json  auto_refine_slide2_iteration1_candidate_generation_current.json  auto_refine_slide2_iteration1_checkpoint.md  auto_refine_slide2_iteration1_error_harness_current.json  auto_refine_slide2_iteration_ladders_construction_intercept_clipped.json  auto_refine_slide2_iteration_ladders_current.json  auto_refine_slide2_iteration_ladders_retained_path.json  cuckoo_tuning_baseline.json  cuckoo_tuning_comparison.json  env-case4-spencer-fingerprint-ENGINEER-PC-20260325T032458Z.json  env-case4-spencer-fingerprint-ENGINEER-PC-20260325T052154Z.json  env-case4-spencer-fingerprint-ENGINEER-PC-20260325T095545Z.json  env-case4-spencer-fingerprint-JAMES-LAP-20260325T034147Z.json  env-case4-spencer-fingerprint-JAMES-LAP-20260325T103642Z.json
src/slope_stab/: cli.py  (+4 more)
tests/: path_setup.py
tmp/: test_gate_stdout.json  verify_gate_stdout.json  verify_parallel_stdout.json
(+367 files in other folders)
