[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slope-stab"
version = "0.1.0"
description = "Verification-first Bishop simplified slope stability solver"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Stanley Gray" }]
dependencies = []

[project.scripts]
slope-stab = "slope_stab.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
